# utility-bot

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
bot/: __main__.py  config.py  logger.py
bot/databases/: models.py  requests.py
bot/domain/: entities.py
bot/repositories/: __init__.py  db.py  readings_repository.py  user_repository.py
bot/repositories/models/: __init__.py  annotations.py  base_model.py  readings_model.py  user_model.py
bot/routers/: __init__.py
bot/routers/commands/: __init__.py  receipt_command.py  start_command.py
bot/services/: __init__.py  auth_service.py  readings_service.py  reminder_service.py  start_service.py
tests/: conftest.py  docker-compose.test.yml
tests/repositories/: test_readings_repository.py  test_user_repository.py
tests/services/: test_readings_service.py  test_reminder_service.py
