[project]
name = "utility-bot"
version = "0.1.0"
description = "Telegram bot for utility billing."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Artem Sokolov", email = "artem.sokolov.dev@gmail.com"},
]
requires-python = ">=3.13,<=4.0"
dependencies = [
    "aiogram>=3.24.0,<=3.30",
    "asyncpg>=0.31.0,<=0.40",
    "greenlet>=3.3.0,<=3.4",
    "pydantic>=2.12.5,<=2.20",
    "pydantic-settings>=2.12.0,<=2.20",
    "sqlalchemy>=2.0.45,<=2.1",
]

# [project.urls]
# homepage = "https://github.com/artem-sokolov-git/utility-bot"
# repository = "https://github.com/artem-sokolov-git/utility-bot"

[dependency-groups]
dev = [
    "mypy>=1.19.1,<=1.20",
    "pre-commit>=4.5.1,<=4.6",
    "ruff>=0.14.11,<=0.15",
]