[project]
name = "utility-bot"
version = "0.1.0"
description = "Telegram bot for utility billing."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Artem Sokolov", email = "artem.sokolov.dev@gmail.com"},
]
requires-python = ">=3.13,<=4.0"
dependencies = [
    "aiogram>=3.24.0,<=3.30",
    "asyncpg>=0.31.0,<=0.40",
    "greenlet>=3.3.0,<=3.4",
    "pydantic>=2.12.5,<=2.20",
    "pydantic-settings>=2.12.0,<=2.20",
    "sqlalchemy>=2.0.45,<=2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1,<=1.20",
    "pre-commit>=4.5.1,<=4.6",
    "pytest>=9.0.2,<=9.1",
    "pytest-asyncio>=1.3.0,<=1.4",
    "ruff>=0.14.11,<=0.15",
]

[tool.ruff]
line-length = 120
target-version = "py313"

lint.select = [
    "E",    
    "W",    
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
]

exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
]

[tool.ruff.lint.isort]
known-first-party = ["bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"

addopts = [
    "--strict-markers",      
    "--tb=short",
    "--disable-warnings",
]

markers = [
    "slow: tests that run slowly",
    "integration: integration tests",
]
